[metadata]
name = soundmonitor
version = 0.0.8
description = Long-term sound level measurements analysis in Python
author = Valérian Fraisse
author_email = valerian.fraisse@mail.mcgill.ca
long_description = file: README.md
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Topic :: Acoustics
  Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib >= 3.7.0
    numpy >= 1.21.6
    pandas >= 1.3.5
    xlrd >= 2.0.1
