[metadata]
name = noisemonitor
version = 0.1.0
description = Long-term sound level measurements analysis in Python
author = Valérian Fraisse
author_email = valerian.fraisse@mail.mcgill.ca
long_description = file: README.md
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Topic :: Acoustics
  Topic :: Scientific/Engineering

[options]
packages = find:
package_dir = 
    = src
python_requires = >=3.7
install_requires =
    matplotlib >= 3.5.3
    numpy >= 1.21.6
    pandas >= 1.3.5
    xlrd >= 2.0.1
    openpyxl >= 3.1.2

[options.packages.find]
where = src
